[package]
name = "soft-float"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "soft_float"
path = "src/main.rs"

[lib]
name = "soft_float"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
softfp = { version = "0.1.0", optional = true }

[features]
soft = ["dep:softfp"]